--- a/homestyle.css
+++ b/homestyle.css
@@ -7,8 +7,8 @@ body {
 /* Reduce margins for small screens (mobile) */
 @media (max-width: 800px) {
     body {
-        margin-left: 3%;
-        margin-right: 3%;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
